--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2503,3 +2503,31 @@ error.interceptor.interface=Given processor class {0} does not implements the {1
 error.interceptor.insufficient.argument=Please specify all the required attributes in class element in ApplicationDAOProperties.xml
 error.interceptor.specimen.message=Error occured while creating the xml message for specimen id {0}.
 error.interceptor.specimen.wmq=Error occured while writing the xml message for specimen id {0}.
+
+#For EMPI
+pageOfMatchedParticipant.searchResultTitle=Matched Participants Result
+collectionProtocol.isEMPIEnable=Is eMPI Enabled
+participant.generateEMPI=Generate eMPI
+participant.eMPIId= eMPI
+participant.empiid.generation.success=<font color\="blue"> eMPI successfully generated for the participant {0}. </font>
+participant.empi.registration.success.message=<font color\="blue">Request sent for registering new patient {0} to eMPI.</font>
+participant.empi.registration.notvalid.message=<font color\="blue">Cannot register this participant to eMPI.Last name, first name and date of birth are mandatory</font>
+participant.empi.registration.failure.message=<font color\="blue">Cannot register this participant to eMPI.\:{0}</font>
+participant.empiid.generation.message=<font color\="blue">Please visit message board at Data Entry-->Process Messages-->Registration to resolve matching participants from eMPI</font>
+participant.empiid.zero.match.message=<font color\="blue">No matched patients found from eMPI.</font>
+participant.edit.empigeneration.unsuccess.message=<font color\="blue">Participant is waiting for eMPI Id to generate.So can not edit or generate EMPI Id for the participant</font>
+participant.empiid.generation.waiting.message=<font color\="blue">Participant cannot be edited as eMPI of this participant is being generated</font>
+process.participant.message=<font color="blue">Please double click on the participant to associate with eMPI</font>
+visit.noSCG=Specimen collection group is not associated with visit.
+
+empi.adminuser.closed.subject=eMPI admin user specified in property file is closed
+empi.adminuser.closed.body.start=Your account has been closed by the administrator.
+empi.adminuser.closed.comments=For performing eMPI id generation related activities,specified eMPI admin user should be active.So please set the activity status as "Active".
+empi.adminuser.closed.email.failure=eMPI admin user account closure email not sent to the admin user.
+empi.adminuser.invalid.body.end=Thank you,
+
+empi.adminuser.notexists.subject=eMPI admin user specified in property file is not exists in the application
+empi.adminuser.notexists.body.start=eMPI admin user specified in the property file doesn't exists in the application.
+empi.adminuser.notexists.comments=For performing eMPI id generation related activities,specified eMPI admin user must exists in the application.So please add specified eMPI admin user.
+empi.adminuser.notexists.email.failure=eMPI admin user not exists email not sent to the admin user.
+
