--- a/WEB-INF/src/participantManager.properties
+++ b/WEB-INF/src/participantManager.properties
@@ -4,3 +4,9 @@ ParticipantClassName=edu.wustl.catissuecore.domain.Participant
 PartcipantMedIdClassName=edu.wustl.catissuecore.domain.ParticipantMedicalIdentifier
 UserClassName=edu.wustl.catissuecore.domain.User
 ParticipantManagerIMPlClassName=edu.wustl.catissuecore.client.CaTissueParticipantManagerServiceImpl
+
+#HL7 message values
+SendingApplication=ADT_CATISSUE_1
+SendingFacility=WUSM_CATISSUE
+EventTypeCode=A08
+FacilityID=6C
