empi : participant add Message changes
SVN-Revision: 26352

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2513,10 +2513,15 @@ participant.empiid.generation.success=<font color\="blue"> eMPI successfully gen
 participant.empi.registration.success.message=<font color\="blue">Request sent for registering new patient {0} to eMPI.</font>
 participant.empi.registration.notvalid.message=<font color\="blue">Cannot register this participant to eMPI.Last name, first name and date of birth are mandatory</font>
 participant.empi.registration.failure.message=<font color\="blue">Cannot register this participant to eMPI.\:{0}</font>
-participant.empiid.generation.message=<font color\="blue">Please visit message board at Data Entry-->Process Messages-->Registration to resolve matching participants from eMPI</font>
+participant.empiid.generation.message=<font color\="blue"> Attention: The eMPI generation process has found matching participants for {0}. Please click <a href\="javascript:window.parent.location\='ProcessMatchedParticipants.do?pageOf\=pageOfMatchedParticipant&identifierFieldIndex\=0'" >here</a> to resolve.</font>
+#participant.empiid.generation.message=<font color\="blue">Please visit message board at Data Entry-->Process Messages-->Registration to resolve matching participants from eMPI</font>
 participant.empiid.zero.match.message=<font color\="blue">No matched patients found from eMPI.</font>
 participant.edit.empigeneration.unsuccess.message=<font color\="blue">Participant is waiting for eMPI Id to generate.So can not edit or generate EMPI Id for the participant</font>
 participant.empiid.generation.waiting.message=<font color\="blue">Participant cannot be edited as eMPI of this participant is being generated</font>
+participant.empi.lookup=Possible Participant Matches from eMPI
+participant.processed.notFound=There are zero participant details to display.
+participant.processed.delete.success=Participant deleted successfully
+participant.processed.delete.failure=Unable to delete the participant from message board
 process.participant.message=<font color="blue">Please double click on the participant to associate with eMPI</font>
 visit.noSCG=Specimen collection group is not associated with visit.
 
