--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -71,7 +71,7 @@ email.exception.subject=System Exception Occured.
 #Default value is 30 minutes
 session.timeout=30
 #sets the addition info on home page
-app.additional.info=v1.2.2
+app.additional.info=
 
 #Information related to first administrator account
 first.admin.department=d
@@ -108,9 +108,8 @@ include.entitygroup=
 #you want to make the owner.
 saved.query.owner=
 
-
-#if catissue has IdP then idp.enabled=true
-#if idp.enabled=true then only fill below properties of #CLINPORTAL DATABASE CREDENTIALS and #CSM DATABASE CREDENTIALS
+#CSM DATABASE CREDENTIALS
+#if idp.enables is true please fill all the details for Clinportal DB below as well as IDP DB details.
 idp.enabled=false
 
 #CSM DATABASE CREDENTIALS
@@ -121,7 +120,17 @@ csm.database.name=
 csm.database.username=
 csm.database.password=
 
-#CLINPORTAL DATABASE CREDENTIALS
+
+#wmq.server.name=10.40.53.15
+#wmq.mgr.name=QM_RULES_ENGINE_TST
+#wmq.channel=CLIENT2RULESENGINE
+#wmq.port=1416
+
+
+# admin user for eMPI particiapnt update
+hl7.listener.admin.user=clinportal_eMPI@admin.com
+
+#Clinportal db details for user account integration.
 clinportal.database.type=
 clinportal.database.host=
 clinportal.database.port=
