changes for empi & cider integration
SVN-Revision: 26390

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1259,6 +1259,7 @@ site.state=State
 site.country=Country
 site.zipCode=Zip Code
 site.phoneNumber=Phone Number
+site.facilityId=Facility Id
 site.faxNumber=Fax Number
 site.searchTitle=Enter The Identifier
 #-- StorageType Add/Edit Keys End --
