--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -148,3 +148,27 @@ clinportal.url=
 cider.integration.enabled=false
 
 
+cider.wmq.server.name=
+cider.wmq.mgr.name=
+cider.wmq.channel=
+cider.wmq.port=
+cider.outbound.queue=
+
+
+# eMPI database related values
+
+empi.database.host=
+empi.database.port=
+empi.database.name=
+empi.database.username=
+empi.database.password=
+empi.database.schema=
+
+# eMPI : WMQ server related values
+wmq.server.name=
+wmq.mgr.name=
+wmq.channel=
+wmq.port=
+
+# admin user for eMPI particiapnt update
+hl7.listener.admin.user=admin@admin.com
