Bug Number:18203 Description:Does not give Proper Error for Non-Existing Collection Protocol ID while Adding Specimen Collection Group using Bulk Operation. Code Reviewed By: Sachin Lale
SVN-Revision: 27413

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -1542,7 +1542,7 @@ assignPrivileges.privileges=Privilege
 assignPrivileges.objectType=Object Type
 assignPrivileges.recordId=Record Id
 assignPrivileges.attribute=Attribute
-assignPrivileges.group=Group/User
+assignPrivileges.group=Group
 assignPrivileges.bloodCancerProtocol=Assign Privileges 'Blood Cancer Protocol'
 assignPrivileges.privilegeDetails=Privilege Details
 assignPrivileges.gridPrivilege=Assign privileges to users from other organizations
@@ -1551,7 +1551,6 @@ assignPrivileges.site(s)=Site(s)
 assignPrivileges.privilege(s)=Privilege(s)
 assignPrivileges.collectionProtocol(s)=Collection Protocol(s)
 assignPrivileges.stem=Organization
-assignPrivileges.group=Group
 assignPrivileges.allCurrentAndFuture=All Current and Future
 assignPrivileges.customize=Customize
 PHI_ACCESS=PHI Access
@@ -1938,6 +1937,7 @@ errors.collectionprotocolregistration.atleast=Either protocol participant identi
 errors.cannotedit.firsttimelogin=You cannot edit the first time login field
 specimencollectiongroup.collectionStatus.errMsg=Collection Status is invalid.
 
+specimenCollectionGroup.CollectionProtocoloRegistrationId= Collection Protocol Registration ID
 #Key for max storage containers
 container.maxView=Only 200 of total containers displayed. Click Map button to view all.
 
