using common sync file
SVN-Revision: 27419

--- a/software/caTissue/modules/core/src/main/java/gsid.properties
+++ b/software/caTissue/modules/core/src/main/java/gsid.properties
@@ -2,7 +2,7 @@
 gsid.isEnabled=@@gsid.isEnabled@@
 
 # enter the Dorian URL used for the User authentication.
-gsid.dorianURL=@@gsid.dorianURL@@
+#gsid.dorianURL=@@gsid.dorianURL@@
 
 # enter the GSID URL.
 gsid.serviceURL=@@gsid.serviceURL@@
@@ -38,7 +38,7 @@ gsid.registerSite.phoneNumber=@@gsid.registerSite.phoneNumber@@
 gsid.registerSite.organizationName=@@gsid.registerSite.organizationName@@
 
 # enter the location of sync description file.
-gsid.synDescriptionFileLocation=@@gsid.synDescriptionFileLocation@@
+# gsid.synDescriptionFileLocation=@@gsid.synDescriptionFileLocation@@
 
 gsid.target.grid=@@gsid.target.grid@@
 
