--- a/software/caTissue/modules/core/src/main/java/gridgrouper.properties
+++ b/software/caTissue/modules/core/src/main/java/gridgrouper.properties
@@ -2,10 +2,10 @@
 gridgrouper.isEnabled=@@gridgrouper.isEnabled@@
 
 # enter the Dorian URL used for the User authentication.
-gridgrouper.dorianURL=@@gridgrouper.dorianURL@@
+#gridgrouper.dorianURL=@@gridgrouper.dorianURL@@
 
 # enter the GRIDGROUPER URL.
-gridgrouper.serviceURL=@@gridgrouper.serviceURL@@
+#gridgrouper.serviceURL=@@gridgrouper.serviceURL@@
 
 # enter the user name.
 gridgrouper.userName=@@gridgrouper.userName@@
@@ -14,7 +14,7 @@ gridgrouper.userName=@@gridgrouper.userName@@
 gridgrouper.password=@@gridgrouper.password@@
 
 # enter the location of sync description file.
-gridgrouper.synDescriptionFileLocation=@@gridgrouper.synDescriptionFileLocation@@
+# gridgrouper.synDescriptionFileLocation=@@gridgrouper.synDescriptionFileLocation@@
 
 gridgrouper.target.grid=@@gridgrouper.target.grid@@
 
