* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27427

--- a/software/caTissue/modules/core/src/main/java/ctrp.properties
+++ b/software/caTissue/modules/core/src/main/java/ctrp.properties
@@ -3,7 +3,7 @@ ctrp.isEnabled=@@ctrp.isEnabled@@
 #ctrp.isEnabled=true
 
 # enter the Dorian URL used for the User authentication.
-ctrp.dorian.loginURL=@@ctrp.dorian.loginURL@@
+# ctrp.dorian.loginURL=@@ctrp.dorian.loginURL@@
 #ctrp.dorian.loginURL=https://dorian.training.cagrid.org:8443/wsrf/services/cagrid/Dorian
 
 # enter the target Dorian grid env used for the User authentication.
@@ -11,7 +11,7 @@ ctrp.dorian.targetGridEnv=@@ctrp.dorian.targetGridEnv@@
 #ctrp.dorian.targetGridEnv=training
 
 # enter the location of sync description file.
-ctrp.dorian.syncDescFile=@@ctrp.dorian.syncDescFile@@
+# ctrp.dorian.syncDescFile=@@ctrp.dorian.syncDescFile@@
 #ctrp.dorian.syncDescFile=ctrp-sync-description.xml
 
 # enter the user name.
