--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -851,7 +851,7 @@
 
 -->
 
-	<target name="create_zip" depends="createJavaDoc,installable_build_war">
+	<target name="create_zip" depends="createJavaDoc, installable_build_war">
 		<property name="zip.dir" value="${dist.dir}" />
 		<property name="zip.file" value="${base.dir}/caTissue_Suite_v${application.version}_Installable.zip" />
 
@@ -1028,6 +1028,7 @@
 				<include name="dom4j-1.6.1.jar" />
 				<include name="sdk-grid-remoting-4.2.jar" />
 				<include name="sdk-client-framework-4.2.jar" />
+				<include name="sdk-security-client-4.2.jar" />
 				<include name="sdk-writable-api-client-4.2.jar" />
 				<include name="caGrid-CQL-cql.1.0-1.3.jar" />
 				<include name="catissue_cacore-beans.jar" />
