--- a/software/caTissue/modules/caTissueStaticDataService/.project
+++ b/software/caTissue/modules/caTissueStaticDataService/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Catissue_cacore</name>
+	<name>caTissueStaticDS+WritableAPI</name>
 	<comment></comment>
 	<projects>
 	</projects>
