--- a/software/caTissue/modules/caTissueDEDataService/.project
+++ b/software/caTissue/modules/caTissueDEDataService/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Catissue_DE</name>
+	<name>caTissueDynExtDataService</name>
 	<comment></comment>
 	<projects>
 	</projects>
