--- a/software/caTissue/modules/tests/unit/caTissueSuite_Client/.project
+++ b/software/caTissue/modules/tests/unit/caTissueSuite_Client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>catissuecore-caCore-tests</name>
+	<name>caTissueSuite-Client</name>
 	<comment></comment>
 	<projects>
 	</projects>
