Reverting the changes.
SVN-Revision: 27497

--- a/build.xml
+++ b/build.xml
@@ -801,6 +801,7 @@
 			<fileset file="${base.dir}/WEB-INF/lib/hibernate3.jar" />
 			<fileset file="${base.dir}/WEB-INF/lib/opencsv-1.8.jar" />
 			<fileset file="${base.dir}/WEB-INF/lib/struts.jar" />
+			<fileset file="${base.dir}/WEB-INF/lib/commons-digester3-3.0.jar" />
 			<fileset file="${base.dir}/extra_lib/xerces.jar" />
 		</copy>
 		<copy file="bulkOperation.properties" todir="${zip.dir}/modules/bulk_operations/conf" overwrite="true" />
