* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27499

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -868,7 +868,7 @@ object.edit.successOnly={0} successfully updated.
 id=System Identifier = {0}
 1.true=Your membership request has been received. Please wait for an approval email from caTissue Suite Administrator. Thank you.
 1.false=User successfully updated
-1.grouper.user.sucess=User successfully created and migrated . Please Login with your grid credentials . 
+1.grouper.user.sucess=User successfully created and migrated. Please Login with your grid credentials. 
 2.true=Participant successfully created
 2.false=Participant successfully updated
 3.true=Accession successfully created
@@ -2457,7 +2457,7 @@ buttons.migrate=Migrate
 buttons.without.migration=Proceed Without Migration
 app.washuuser=You have successfully logged into caTissue. However, you have no privileges in this application.Please enter your information below to have your account activated for use in caTissue.
 app.wustlkey.donotaskagain = Do Not Ask Again
-app.grouperuser=User not found in catissue. If you are member of any groups that have been provisioned in caTissue please enter your information below to have your account activated for use in caTissue. <br/> If you are not a grid user please <a href="SignUp.do?operation=add&pageOf=pageOfSignUp"/>register</a> as new user.
+app.grouperuser=User with login name {0} not found in catissue. If you are a member of any groups that have been provisioned in caTissue please enter your information below to have your account activated for use in caTissue. <br/> If you are not a grid user please <a href="SignUp.do?operation=add&pageOf=pageOfSignUp"/>register</a> as new user.
 errors.wustlkeyorpassword = Incorrect WUSTLKey or password.
 forgotId.wustlkey=Forgot WUSTL Key
 forgotpassword.wustlkeypassword=Forgot WUSTL Key password
