--- a/software/caTissue/modules/core/.classpath
+++ b/software/caTissue/modules/core/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/common_lib/hibernate-core.jar"/>
+	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/compile_lib/hibernate-core-3.3.1.GAnci.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/common_lib/acegi-security-1.0.4.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/common_lib/addressing-1.0.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/common_lib/antlr-2.7.6.jar"/>
