dataService code (by Manav)
SVN-Revision: 27519

--- a/software/caTissue/modules/caTissueStaticDataService/service.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/service.properties
@@ -1,29 +1,37 @@
 #service deployment properties
-#Mon Sep 12 15:48:00 EDT 2011
+
+## Need to update these properties for your local environment
+#This is the host/port of the SDK Application Service
+cql2QueryProcessorConfig_applicationHostName=localhost
+cqlQueryProcessorConfig_applicationHostPort=8080
+cqlQueryProcessorConfig_useHttpsUrl=true
+
+cqlQueryProcessorConfig_applicationHostName=localhost
+cql2QueryProcessorConfig_applicationHostPort=8080
+cql2QueryProcessorConfig_useHttpsUrl=true
+
+
+
+# Defaults should work. By default it will use the
+# callers grid Id to query the SDK Application Service
 dataService_cqlValidatorClass=gov.nih.nci.cagrid.data.cql.validation.ObjectWalkingCQLValidator
-cqlQueryProcessorConfig_useGridIdentityLogin=false
+cqlQueryProcessorConfig_useGridIdentityLogin=true
 dataService_classMappingsFilename=classToQname.xml
 dataService_domainModelValidatorClass=gov.nih.nci.cagrid.data.cql.validation.DomainModelValidator
 cqlQueryProcessorConfig_applicationName=catissuecore
 cqlQueryProcessorConfig_staticLoginUser=admin@admin.com
-cql2QueryProcessorClass=org.cagrid.data.sdkquery42.processor2.SDK42CQL2QueryProcessor
+cql2QueryProcessorClass=edu.wustl.catissuecore.cagrid.CQL2QueryProcessor
 cql2QueryProcessorConfig_staticLoginUser=admin@admin.com
-cql2QueryProcessorConfig_applicationHostPort=8080
 cqlQueryProcessorConfig_staticLoginPass=Aa_111111
 cql2QueryProcessorConfig_applicationName=catissuecore
 cql2QueryProcessorConfig_staticLoginPass=Aa_111111
 serverConfigLocation=server-config.wsdd
-cqlQueryProcessorConfig_applicationHostName=10.10.10.77
-cqlQueryProcessorConfig_useStaticLogin=true
-cqlQueryProcessorConfig_useHttpsUrl=false
+cqlQueryProcessorConfig_useStaticLogin=false
 cqlQueryProcessorConfig_useLocalApiFlag=false
 cql2QueryProcessorConfig_useLocalApiFlag=false
-cql2QueryProcessorConfig_useHttpsUrl=false
-queryProcessorClass=org.cagrid.data.sdkquery42.processor.SDK42QueryProcessor
+queryProcessorClass=edu.wustl.catissuecore.cagrid.CQLQueryProcessor
 dataService_cql2ValidatorClasses=
 dataService_validateDomainModelFlag=true
-cql2QueryProcessorConfig_applicationHostName=10.10.10.77
-cqlQueryProcessorConfig_applicationHostPort=8080
-cql2QueryProcessorConfig_useGridIdentityLogin=false
+cql2QueryProcessorConfig_useGridIdentityLogin=true
 dataService_validateCqlFlag=true
-cql2QueryProcessorConfig_useStaticLogin=true
+cql2QueryProcessorConfig_useStaticLogin=false
