Updated grid service to use GSI
SVN-Revision: 27526

--- a/software/caTissue/modules/caTissueStaticDataService/service.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/service.properties
@@ -1,15 +1,15 @@
 #service deployment properties
-
-## Need to update these properties for your local environment
+# Need to update these properties for your local environment
 #This is the host/port of the SDK Application Service
 cql2QueryProcessorConfig_applicationHostName=localhost
 cqlQueryProcessorConfig_applicationHostPort=8080
-cqlQueryProcessorConfig_useHttpsUrl=true
+cqlQueryProcessorConfig_useHttpsUrl=false
 
 cqlQueryProcessorConfig_applicationHostName=localhost
 cql2QueryProcessorConfig_applicationHostPort=8080
-cql2QueryProcessorConfig_useHttpsUrl=true
+cql2QueryProcessorConfig_useHttpsUrl=false
 
+cqlQueryProcessorConfig_applicationName=catissuecore
 
 
 # Defaults should work. By default it will use the
@@ -18,13 +18,12 @@ dataService_cqlValidatorClass=gov.nih.nci.cagrid.data.cql.validation.ObjectWalki
 cqlQueryProcessorConfig_useGridIdentityLogin=true
 dataService_classMappingsFilename=classToQname.xml
 dataService_domainModelValidatorClass=gov.nih.nci.cagrid.data.cql.validation.DomainModelValidator
-cqlQueryProcessorConfig_applicationName=catissuecore
 cqlQueryProcessorConfig_staticLoginUser=admin@admin.com
 cql2QueryProcessorClass=edu.wustl.catissuecore.cagrid.CQL2QueryProcessor
 cql2QueryProcessorConfig_staticLoginUser=admin@admin.com
-cqlQueryProcessorConfig_staticLoginPass=Aa_111111
+cqlQueryProcessorConfig_staticLoginPass=Login123
 cql2QueryProcessorConfig_applicationName=catissuecore
-cql2QueryProcessorConfig_staticLoginPass=Aa_111111
+cql2QueryProcessorConfig_staticLoginPass=Login123
 serverConfigLocation=server-config.wsdd
 cqlQueryProcessorConfig_useStaticLogin=false
 cqlQueryProcessorConfig_useLocalApiFlag=false
